--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,52 @@ jobs:
 
       # Ejecutar tests
       - name: 🧪 Run tests
+        env:
+          # Database configuration para tests
+          DB_URL: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL;DATABASE_TO_LOWER=TRUE;INIT=CREATE DOMAIN IF NOT EXISTS TEXT AS VARCHAR(255)
+          DB_DRIVER: org.h2.Driver
+          DB_USERNAME: test_user
+          DB_PASSWORD: test_password
+          DB_PLATFORM: org.hibernate.dialect.H2Dialect
+          DB_DDL_AUTO: create-drop
+          DB_SHOW_SQL: false
+          # CORS configuration
+          CORS_ALLOWED_ORIGINS: http://localhost:3000,http://localhost:4200,http://localhost:5173
+          CORS_ALLOWED_METHODS: GET,POST,PUT,PATCH,DELETE,OPTIONS
+          CORS_ALLOWED_HEADERS: Content-Type,Authorization,X-Requested-With,Accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers
+          CORS_EXPOSED_HEADERS: Access-Control-Allow-Origin,Access-Control-Allow-Credentials,Location,X-Total-Count
+          CORS_ALLOW_CREDENTIALS: true
+          CORS_MAX_AGE: 3600
+          # JWT configuration
+          JWT_SECRET: test-secret-key-for-github-actions-minimum-256-bits-required-for-security-purposes-only
+          JWT_EXPIRATION: 86400000
+          JWT_REFRESH_TOKEN_EXPIRATION: 604800000
+          # Server configuration
+          SERVER_PORT: 8080
+          CONTEXT_PATH: /api
+          # H2 Console
+          H2_CONSOLE_ENABLED: false
+          H2_CONSOLE_PATH: /h2-console
+          H2_WEB_ALLOW_OTHERS: false
+          # Swagger
+          SWAGGER_ENABLED: false
+          SWAGGER_UI_ENABLED: false
+          SWAGGER_API_DOCS_PATH: /api-docs
+          SWAGGER_UI_PATH: /swagger-ui.html
+          # Logging
+          LOG_LEVEL_APP: INFO
+          LOG_LEVEL_WEB: WARN
+          LOG_LEVEL_SQL: WARN
+          LOG_LEVEL_HIBERNATE: WARN
+          LOG_LEVEL_ROOT: INFO
+          # Actuator
+          ACTUATOR_ENDPOINTS: health,info
+          ACTUATOR_HEALTH_DETAILS: when-authorized
+          # Spring Profile
+          SPRING_PROFILES_ACTIVE: test
+          # DevTools (disabled in CI)
+          SPRING_DEVTOOLS_RESTART_ENABLED: false
+          SPRING_DEVTOOLS_LIVERELOAD_ENABLED: false
         run: mvn -B test
 
       # Publicar resultados de tests
@@ -133,6 +179,51 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          # Database configuration para tests
+          DB_URL: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL;DATABASE_TO_LOWER=TRUE;INIT=CREATE DOMAIN IF NOT EXISTS TEXT AS VARCHAR(255)
+          DB_DRIVER: org.h2.Driver
+          DB_USERNAME: test_user
+          DB_PASSWORD: test_password
+          DB_PLATFORM: org.hibernate.dialect.H2Dialect
+          DB_DDL_AUTO: create-drop
+          DB_SHOW_SQL: false
+          # CORS configuration
+          CORS_ALLOWED_ORIGINS: http://localhost:3000,http://localhost:4200,http://localhost:5173
+          CORS_ALLOWED_METHODS: GET,POST,PUT,PATCH,DELETE,OPTIONS
+          CORS_ALLOWED_HEADERS: Content-Type,Authorization,X-Requested-With,Accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers
+          CORS_EXPOSED_HEADERS: Access-Control-Allow-Origin,Access-Control-Allow-Credentials,Location,X-Total-Count
+          CORS_ALLOW_CREDENTIALS: true
+          CORS_MAX_AGE: 3600
+          # JWT configuration
+          JWT_SECRET: test-secret-key-for-github-actions-minimum-256-bits-required-for-security-purposes-only
+          JWT_EXPIRATION: 86400000
+          JWT_REFRESH_TOKEN_EXPIRATION: 604800000
+          # Server configuration
+          SERVER_PORT: 8080
+          CONTEXT_PATH: /api
+          # H2 Console
+          H2_CONSOLE_ENABLED: false
+          H2_CONSOLE_PATH: /h2-console
+          H2_WEB_ALLOW_OTHERS: false
+          # Swagger
+          SWAGGER_ENABLED: false
+          SWAGGER_UI_ENABLED: false
+          SWAGGER_API_DOCS_PATH: /api-docs
+          SWAGGER_UI_PATH: /swagger-ui.html
+          # Logging
+          LOG_LEVEL_APP: INFO
+          LOG_LEVEL_WEB: WARN
+          LOG_LEVEL_SQL: WARN
+          LOG_LEVEL_HIBERNATE: WARN
+          LOG_LEVEL_ROOT: INFO
+          # Actuator
+          ACTUATOR_ENDPOINTS: health,info
+          ACTUATOR_HEALTH_DETAILS: when-authorized
+          # Spring Profile
+          SPRING_PROFILES_ACTIVE: test
+          # DevTools (disabled in CI)
+          SPRING_DEVTOOLS_RESTART_ENABLED: false
+          SPRING_DEVTOOLS_LIVERELOAD_ENABLED: false
         run: |
           mvn -B verify \
           org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
